<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayBackground"
    android:orientation="vertical"
    android:padding="@dimen/padding_10">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drop_shadow"
        android:orientation="vertical"
        android:padding="@dimen/padding_10">

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:text="@string/contact_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_1"
            android:background="@color/colorBlueText" />

        <TextView
            android:id="@+id/contact_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_10"
            android:text="@string/contact_1"
            android:textColor="@color/colorCardOrange"
            android:textSize="@dimen/text_14" />


        <TextView
            android:id="@+id/contact_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_10"
            android:text="@string/contact_2"
            android:textColor="@color/colorCardOrange"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/contact_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_10"
            android:text="@string/contact_3"
            android:textColor="@color/colorCardOrange"
            android:textSize="@dimen/text_14" />
        <TextView
            android:id="@+id/contact_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_10"
            android:text="@string/contact_4"
            android:textColor="@color/colorCardOrange"
            android:textSize="@dimen/text_14" />
        <TextView
            android:id="@+id/contact_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_10"
            android:text="@string/contact_5"
            android:textColor="@color/colorCardOrange"
            android:textSize="@dimen/text_14" />

    </LinearLayout>
</LinearLayout>