<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayBackground"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_header_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLine"
                android:padding="@dimen/padding_5"
                android:visibility="gone"
                android:text="NR - JAN/2016"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:background="@drawable/drop_shadow"
                android:orientation="vertical"
                android:padding="@dimen/padding_10">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_connected_load"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <EditText
                        android:id="@+id/et_connected_load"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/connected_load"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlueText"
                        android:textSize="@dimen/text_14" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_from_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/et_from_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/from_date"
                            android:inputType="text"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorBlueText"
                            android:textSize="@dimen/text_14" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_to_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/et_to_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/to_date"
                            android:inputType="text"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorBlueText"
                            android:textSize="@dimen/text_14" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_mdi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <EditText
                        android:id="@+id/et_mdi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mdi"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlueText"
                        android:textSize="@dimen/text_14" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_pf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <EditText
                        android:id="@+id/et_pf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/power_factor"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlueText"
                        android:textSize="@dimen/text_14" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_tecu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <EditText
                        android:id="@+id/et_tecu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/total_energy_consumed"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlueText"
                        android:textSize="@dimen/text_14" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10">

                    <TextView
                        android:id="@+id/et_tebp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/total_energy_bill"
                        android:inputType="text"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlueText"
                        android:textSize="@dimen/text_14" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_nmbill"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10">

                        <EditText
                            android:id="@+id/et_nmbill"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/normal_bill"
                            android:inputType="numberDecimal"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorBlueText"
                            android:textSize="@dimen/text_14" />
                    </android.support.design.widget.TextInputLayout>


                    <TextView
                        android:id="@+id/et_arre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/arrears"
                        android:inputType="text"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlueText"
                        android:textSize="@dimen/text_14" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_weight="2"
                        android:background="@drawable/shape"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_amout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:hint="@string/amount"
                            android:inputType="numberDecimal"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorBlueText"
                            android:textSize="@dimen/text_14" />

                        <View
                            android:layout_width="@dimen/padding_1"
                            android:layout_height="match_parent"
                            android:background="@color/colorLine" />

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/spn_year"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_totalbill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <EditText
                        android:id="@+id/et_totalbill"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/total_bill"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlueText"
                        android:textSize="@dimen/text_14" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_avg_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <EditText
                        android:id="@+id/et_avg_cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/average_cost"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlueText"
                        android:textSize="@dimen/text_14" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <EditText
                        android:id="@+id/et_remarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:hint="@string/remarks"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:padding="@dimen/padding_10"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlueText"
                        android:textSize="@dimen/text_14" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_save_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@color/colorButton"
                    android:text="@string/save_n_next"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_1" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>