<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGrayBackground"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_10"
    android:paddingRight="@dimen/padding_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_1"
            android:paddingLeft="@dimen/padding_1"
            android:paddingRight="@dimen/padding_1">

            <LinearLayout
                android:id="@+id/linear_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_railway"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/padding_5"
                    android:text="@string/mis_railway"
                    android:textColor="@color/colorDarkBlack"
                    android:textSize="@dimen/text_12" />


                <View
                    android:layout_width="@dimen/padding_1"
                    android:layout_height="match_parent"
                    android:background="@color/colorDarkBlack" />

                <TextView
                    android:id="@+id/tv_consumed_energy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/padding_5"
                    android:text="@string/mis_consumed_energy"
                    android:textColor="@color/colorDarkBlack"
                    android:textSize="@dimen/text_12" />

                <View
                    android:layout_width="@dimen/padding_1"
                    android:layout_height="match_parent"
                    android:background="@color/colorDarkBlack" />

                <TextView
                    android:id="@+id/tv_bill_paid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/padding_5"
                    android:text="@string/mis_bill_paid"
                    android:textColor="@color/colorDarkBlack"
                    android:textSize="@dimen/text_12" />

                <View
                    android:layout_width="@dimen/padding_1"
                    android:layout_height="match_parent"
                    android:background="@color/colorDarkBlack" />

                <TextView
                    android:id="@+id/tv_avg_cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/padding_5"
                    android:text="@string/mis_avg_cost"
                    android:textColor="@color/colorDarkBlack"
                    android:textSize="@dimen/text_12" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>